# MyWebServer

./: .gitignore  1.sh  CMakeLists.txt  README.md  build-centos.sh  build.sh  chenWeb  config.yaml  main.cpp  main2.cpp  makefile
.github/workflows/: codacy.yml  codeql.yml  sync2gitee.yml
config/: CMakeLists.txt  config.cpp  config.h
global/: global.cpp  global.h
http/: http_conn.cpp  http_conn.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  state_code.h
include/yaml-cpp/: null.h
lib/yaml-cpp/: CMakeLists.txt  emitter.cpp  emitterutils.cpp  exp.cpp  null.cpp  scanner.cpp  scanner.h  scantoken.cpp  singledocparser.cpp  stream.cpp
lock/: locker.h
log/: BlockQueue.h  block_queue.cpp  block_queue.h  log.cpp  log.h
pool/: sqlconnpool.cpp  sqlconnpool.h  threadpool.cpp  threadpool.h
resource/: index.html
resources/: README.md  index.html  log.html  logError.html  picture.html  register.html  registerError.html  test.html  video.html  welcome.html
timer/: listtimer.cpp  listtimer.h
utils/: utils.cpp  utils.h
webserver/: webserver.cpp  webserver.h
